# TempusFujitNext

./: .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json
.github/workflows/: node.js.yml
actions/: query.ts
cs_backend/: Program.cs  appsettings.Development.json  appsettings.json  cs_backend.csproj  cs_backend.http  cs_backend.sln
cs_backend/Controllers/: GroupController.cs  HealthCheckController.cs  SessionController.cs  UserController.cs
cs_backend/Controllers/utils/: Converters.cs  UserHelper.cs
cs_backend/Infrastructure/: JwtService.cs  MyDbContext.cs
cs_backend/Infrastructure/Middleware/: ExceptionLogger.cs
cs_backend/Infrastructure/Migrations/: 20241105221114_init.Designer.cs  20241105221114_init.cs  20241112205129_add-groups.Designer.cs  20241112205129_add-groups.cs  20241114224813_create-sessions.Designer.cs  20241114224813_create-sessions.cs  20250123202714_add_note_to_session.Designer.cs  20250123202714_add_note_to_session.cs  MyDbContextModelSnapshot.cs
cs_backend/Infrastructure/PersistedModels/: GroupState.cs  SessionState.cs  TraitState.cs  (+1 more)
cs_backend/Properties/: launchSettings.json
cs_backend/Services/: GroupService.cs  SessionService.cs  UserService.cs
frontend/: package-lock.json  package.json  tailwind.config.ts
infrastructure/: Dockerfile  entrypoint.sh
infrastructure/github-actions-runner/: Dockerfile  entrypoint.sh
libs/: db.ts
prisma/: schema.prisma
py_backend/: .gitignore  config.py  db.py  main.py  pyproject.toml  user.py
py_backend/models/: common.py  repository.py
src/app/: layout.tsx  page.tsx
(+28 files in other folders)
