[tool.poetry]
name = "tempus-fujit-backend"
version = "0.1.0"
description = ""
authors = ["lucas <ioroscampo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
fastapi = "^0.115.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
